# quicklog-android

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/quickloglib/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  quick-log.c
app/src/main/java/com/example/quickloglib/: MainActivity.java  QuickLog.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/quickloglib/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
